Initial Stylesheet setup

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
-<head><title> My Page! </title></head>
+<head>
+    <title> My Page! </title>
+    <link rel="stylesheet" type="text/css" href="common.css"/>
+</head>
 <body>
-<h1> Manan Shah</h1>
+    <div class="page">
+        This is the home page of all the pages
+    </div>
 </body>
 </html>
