updaing the index file

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 </head>
 <body>
 <div class="page">
-    This is the home page of all the pages
+This page is WIP (Work in progress)
+I have still just added the base html, css (scss) files. Haven't gotten much time to work on this :(
 </div>
 </body>
 </html>
