--- a/index.html
+++ b/index.html
@@ -1,30 +1,6 @@
 ---
-# front matter tells Jekyll to process Liquid
+layout: default
+title: Home
 ---
-<html>
-<head>
-    <title> My Page! </title>
-    <link rel="stylesheet" type="text/css" href="common.css"/>
-    <link rel="stylesheet"
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
-          integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
-          crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
-            integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
-            integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
-            crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
-            integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
-            crossorigin="anonymous"></script>
-
-</head>
-<body>
-<div class="page">
-    <h1>{{ "Hello World!" | downcase }}</h1>
-    This page is WIP (Work in progress)
-    I have still just added the base html, css (scss) files. Haven't gotten much time to work on this :(
-</div>
-</body>
-</html>
+<h1>{{ "Hello World!" | downcase }}</h1>
+Now also using layouts
